--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="countainer"> 
 		<div class="card-lightyellow" id="introduction"> 
 			<h1>Hello, I'm Tess 🩷</h1>
-			<img src="images/profile.jpg" class="img-circle" alt="Tess Dehem">
+			<img src="images/profile-picture.jpg" class="img-circle" alt="Tess Dehem">
 			<p>
 			I love shopping, cooking and taking time with my friends and my family (in particulary my cat, Gus)🥰
 			</p>
